--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@google/generative-ai": "^0.1.3",
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
     "esm": "^3.2.25",
     "express": "^4.18.2",
     "node-fetch": "^2.7.0",
