--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "@google/generative-ai": "^0.1.3",
     "body-parser": "^1.20.2",
+    "connect-mongo": "^5.1.0",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "esm": "^3.2.25",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "mongoose": "^8.0.3",
     "node-fetch": "^2.7.0",
     "sentiment": "^5.0.2"
   }
