--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "esm": "^3.2.25",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
     "node-fetch": "^2.7.0",
     "sentiment": "^5.0.2"
