--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.1.3",
     "body-parser": "^1.20.2",
+    "connect-flash": "^0.1.1",
     "connect-mongo": "^5.1.0",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
@@ -27,5 +28,4 @@
     "chai": "^5.0.0",
     "mocha": "^10.2.0"
   }
-  
 }
